Remove unnecessary option
Co-authored-by: Christian Stein <sormuras@gmail.com>